# ISL_info

./: CMakeLists.txt  main.cpp
01/: FicheSalaire.cpp  FicheSalaire.h  mainFicheSalaire.cpp
exo_suppl_heritage/: Commercial.h  Commercials.cpp  Employee.cpp  Employee.h  HeritageExe.cpp  Manager.cpp  Manager.h  Staff.h  StaffStatic.cpp  StaffStatic.h  staff.cpp
